--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -33,8 +33,8 @@
 母乳喂养到底要多长时间呢？有小儿科的报告说，如果能维持很平稳的状况呢，至少喂母乳6个月。喂.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 2:54 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751840.md#1" target="_blank">40年守护无数早产儿 医师许琼心：愿为小病人燃烧一生</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/28/n11751840.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/xuqiongxin-1230-150x120.jpg" align ="left"></a>在马偕儿童医院的新生儿病房和早产儿加护病房之间，有一条长长的甬道，许琼心在这里疾步穿行了四十年。她就这样走入一个个“巴掌仙子”的人生。70岁的许琼心，在台湾儿科被男医师独占的年代，是马偕儿科的第一位女住院医师，也见证了台湾第一个新生儿加护病房的成立。她人生大半的岁月都在救援早产儿中度过。无数个瑟缩在保温箱里、......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月30日 12:29 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753310.md#1" target="_blank">7个关于贝多芬的小故事</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753310.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/scupGettyImages-1143971275-150x120.jpg" class="attachment-thumbnail size-thumbnail wp-post-image" alt="Sculptures representing German composer Ludwig van Beethoven and made by conceptual artist Ottmar Hoerl are displayed on May 15, 2019 at the Muensterplatz square in Bonn, western Germany. - Around 700 sculptures by the artist are displayed in the city until June 2, 2019 as part of the festivities to mark the 250th anniversary of Beethoven&#039;s birth. (Photo by INA FASSBENDER / AFP) / RESTRICTED TO EDITORIAL USE - MANDATORY MENTION OF THE ARTIST UPON PUBLICATION - TO ILLUSTRATE THE EVENT AS SPECIFIED IN THE CAPTION (Photo credit should read INA FASSBENDER/AFP via Getty Images)" align ="left"></a>2020年12月17日即将迎来有“乐圣”之称的德国作曲家贝多芬（Ludwig van Beethoven，1770-1827）250岁诞辰。为什么日本每年组织万人合唱《欢乐颂》除旧布新？据说贝多芬很爱喝酒，他的最后遗言是什么？德国之声分享了几个贝多芬专家都不一定知道的小故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 10:26 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760453.md#1" target="_blank">台湾古典诗：题《台湾汉诗三百首》（二）</a><br></h3> 先贤风雅见真章，典律东宁鲁殿光， 三百珠玑无俗韵，海隅诗史共流芳。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 8:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760446.md#1" target="_blank">诗歌：新年</a><br></h3> 一梦旧岁雪初晴 又闻新年笑语盈 几多缘厚今生遇 但愿真相伴君明......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月01日 7:07 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753121.md#1" target="_blank">五律：彩虹</a><br></h3> 黑夜依然夜，黎明仍未明。 一命交生死，十年当死生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月31日 12:12 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11753300.md#1" target="_blank">歌词：我与自己有个约定</a><br></h3> 那一世我没能修成，我与自己有个约定。 等婆罗花开的时候，我要重修佛法寻圣。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月29日 9:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
