--- a/gb/nf3046_4.md
+++ b/gb/nf3046_4.md
@@ -11,7 +11,7 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank">法兰克福中国节上 民众谴责中共迫害法轮功</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/1/n11492087.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/365285D4-C993-41B7-A03E-8C2727AA590F-150x120.jpeg" align ="left"></a>8月30日至9月1日，法轮功学员在法兰克福市内举行的“中国节”期间，举办了信息日活动，向民众揭露中共对法轮功的残酷迫害并征集反迫害签名，得到许多民众的支持，其中明白真相的华人声明退出中共组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月03日 7:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank">30多国法轮功学员聚伦敦 在著名景点洪法</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/30/n11487732.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/48642438366_5ccb244540_o1-150x120.jpg" align ="left"></a>“我曾经是一位太极拳教练，2012年我到了中国的武当山，因为我对气功非常好奇，中国一位中医大夫告诉我，在中国有一种气功是被禁止的。我当时听到这个消息非常吃惊，因此开始在网络上查询关于法轮大法的消息，当看到法轮大法的书时，我立刻就明白了：就是我要找的！我终于找到了法轮大法！”戈杰?查代（Gorger Cadez）说。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月30日 4:14 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank">一位中国老太在欧洲不平凡的20年（下）</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/7/n11436959.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/f04334acc2f7f6640bab6c1a76a7987b-150x120.jpg" align ="left"></a>瑞士伯尔尼法轮功学员潘淑珍在卢塞恩景点劝中国游客三退的故事。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月23日 12:36 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/25/n11544882.md#1" target="_blank">每日三退声明精选（2019/09/24）</a><br></h3>我在大学时由于成绩优异，被国内共党虚假消息洗脑，在学校和学院领导不断劝说下加入中共。后来来到美国，看到听到大量被中共隐藏和改编的事实真相，十分震惊和愤怒。于是在大约两年半前立即停交党费，与共产党邪恶组织脱离关系。由于担心共匪虚构事实，在此公开声明，我早已与中国共产党脱离关系，并且支持全世界正义联盟打倒共产党。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月25日 11:38 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank">网民白宫请愿连署：将中共定为恐怖组织</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/8/13/n11449390.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/CCP-150x120.jpg" align ="left"></a>有鉴于香港局势恶化、港警暴力升级，有民众在美国白宫请愿网站“我们人民”（We the People）发起征签活动，要求美国政府正式将幕后黑手中国共产党定为恐怖组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年08月20日 1:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/24/n11542396.md#1" target="_blank">每日三退声明精选（2019/09/23）</a><br></h3>本人在大陆长大，自从学会翻墙和去过国外之后，看到了国外和大陆最大的不同就是没有共产独裁的社会其实才是最好的。我当初被中共这些人欺骗，现在一想起来就火大。包括马云等所谓的有钱人，就算是多有钱也保不住他们。有幸看到三退的机会，决定在这里退出中共的党团队，不想被中共牵连。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 11:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/23/n11539939.md#1" target="_blank">每日三退声明精选（2019/09/22）</a><br></h3>作为一个有良知的人，在学生时期内心的迷蒙和资讯的封闭让我不知道这是怎样的一个组织，在老师的强烈要求下加入共青团(不加入共青团会被老师孤立)，然而在学校中，政治和学习挂钩这么深真的是万分不能让人接受。这一事实令我痛苦不已，从入团那天起就对自己产生了深深的质疑，在对于加入与否这件事上不能自主选择，那么加入真的是一件对的事吗？从那个时候起就对政治制度有了一些侧面的.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/9/21/n11536505.md#1" target="_blank">每日三退声明精选（2019/09/20）</a><br></h3>恶党又在借维稳来迫害民众，而真正的不稳定因素都是恶党自己搞出来的，反过来又借维稳来大肆欺压掠夺民众，真正的动乱之源就是中共，中共才是真正的邪教。中共气数已尽，作恶到头终有报。退出我们所加入的邪党组织保平安。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月21日 11:37 AM							</td></tr>
