--- a/gb/ncid280_3.md
+++ b/gb/ncid280_3.md
@@ -11,12 +11,9 @@
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank">广州主干道地陷深至38米 2车3人失踪</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/1/n11693420.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/6b1510bagy1g9gznq3c2xj20jk0g0tf2-150x120.jpg" align ="left"></a>广州大道北与禺东西路交界处发生地面塌陷，塌方地区最深38米，两辆车陷入看不到踪影。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 12:51 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11685479.md#1" target="_blank">内蒙再确诊鼠疫 传长春也现疫情 消息被删</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11685479.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/84364d29fb10c9a7c99b5abda166169e-150x120.jpg" align ="left"></a>北京时间11月27日夜间，中共内蒙古卫健委官网公布第4例鼠疫病例。自北京确诊2例肺鼠疫患者以来，各地防治鼠疫的宣传大张旗鼓，但一些相关案例却被禁止讨论，令外界质疑，当局有意在掩盖疫情真相。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月29日 3:05 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11684922.md#1" target="_blank">王立强点名黄向墨涉共谍 专家：不只这条线</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/27/n11684922.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/6b1b77289ee716809eea74113297f1bf-150x120.jpg" align ="left"></a>投诚澳洲的中共间谍“王立强”向澳洲媒体爆料，中共近年持续对台湾、澳洲进行渗透，同时他也点名中国富商黄向墨，同样得向他的上司汇报；有专家表示，“王立强”所爆料的只是中共渗透台湾的一种模式，主要负责收购或窃取新能源技术与情报。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月28日 3:24 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/24/n11677610.md#1" target="_blank">鼠疫爆发地内蒙锡林郭勒 八九月已老鼠成灾</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/24/n11677610.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/GettyImages-482246112-150x120.jpg" align ="left"></a>中国大陆鼠疫疫情呈现严峻态势。鼠疫的首发地内蒙古锡林郭勒盟的村民表示，老鼠在当地早已泛滥成灾。当局最近动用直升飞机灭鼠。
-
-该盟锡林浩特市宝力根苏木希日塔拉嘎查一位不愿透露姓名的村民向大纪元记者透露，当地八九月老鼠就已经多起来了。
-
-“老鼠是今年突然特别多，我们这八九月份开始多起来，六七月份时是其它地方多，还没有到我们这，一片一片地多起来了。在野地里.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 11:31 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank">鼠疫慌 京蒙之间设三道防线 河北现“通知”</a><br></h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/22/n11674617.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/EJ7uJQMUYAAz_e2-150x120.jpeg" align ="left"></a>内蒙、甘肃等地早些时间已爆发鼠疫，但当局掩盖真相，人心惶恐。目前内蒙已接近草木皆兵，车站、火车站、机场、医院都要检查体温。有网上消息称，目前很多村庄已经被完全封锁，村民不许进出，村庄通讯也遭切断。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月23日 3:47 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/8/n11708036.md#1" target="_blank">京津冀多地持续阴霾天 航班高速路均受影响</a><br></h3>12月8日，河北南部、北京东南部、河南中东部、山东西北部等地的部分地区因重度阴霾影响，多处高速路段封闭，机场航班也被取消。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 3:12 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/7/n11706911.md#1" target="_blank">遂宁小区疑似一氧化碳中毒事故 2死7住院</a><br></h3>12月8日，四川遂宁市安居区凤凰街道某小区发生一氧化碳中毒事件，导致2死、7人身体不适，已在医院救治。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月08日 2:37 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/7/n11707059.md#1" target="_blank">兰州兽研所布鲁氏菌阳性人数增至96人</a><br></h3>目前，中国农业科学院兰州兽医研究所布鲁氏菌阳性人数已增至96人。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月07日 5:17 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11705039.md#1" target="_blank">佛山山火持续24小时 火势随风力加大蔓延</a><br></h3>12月5日13时53分，广东省佛山市高明区荷城街道凌云山发生山火，大火烧了整整一天（24小时），到6日火势扩大，目前火还没有灭并随风力加大蔓延。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 7:37 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/6/n11704994.md#1" target="_blank">黔高速37车连环撞23人伤 有人颅脑损伤</a><br></h3>12月6日上午8时20分左右，遵蓉高速公路（贵州遵义至四川成都）在遵义习水县路段，疑因大雾和路面结冰湿滑等原因，导致37车连环追撞，至少23人受伤送院，有人重度颅脑损伤。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月06日 4:01 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/5/n11702307.md#1" target="_blank">浏阳烟花厂爆炸7死 厂房成平地 汽车炸变形</a><br></h3>昨日（12月4日），湖南长沙浏阳市澄潭江镇碧溪烟花制造有限公司石下工区发生爆炸后，已致7人死13人受伤。今日（12月5日）有消息指，当时厂房炸成废墟，面包车都被炸得扭曲变形，现场还升起蘑菇云状黑烟。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月05日 4:40 PM							</td></tr>
@@ -40,6 +37,5 @@
 
 截至27日上午9时，在前期自救的情况下，9人获救；后又救出5人。但是这14.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月27日 11:17 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/25/n11679108.md#1" target="_blank">广西靖西5.2级地震 余震15次 至少1人死亡</a><br></h3>11月25日上午，广西靖西市发生5.2级地震，随后又发生3.9级余震，导致1人死亡4人受伤。中午，广西崇左市大新县发生3.2级地震。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月25日 4:32 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/19/11/21/n11671034.md#1" target="_blank">传北京东城区广渠门中学一学生被刺身亡</a><br></h3>11月21日上午，北京东城区天坛东路上原人才市场附近，广渠门中学一名学生被刺身亡。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年11月21日 5:25 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_2.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_2.md#1">2</a>&nbsp;&nbsp;3&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_4.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ublry267/djy/blob/master/gb/ncid280_3.md#1<br><a href="https://github.com/ublry267/djy/blob/master/gb/ncid280_3.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/ncid280_3.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid280_3.htm">http://www.epochtimes.com/gb/ncid280_3.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
