--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/29/n11752142.md#1">上海青浦监狱数名受酷刑外国人揭恐怖内幕</a><br>
 <br><p><a href="https://github.com/ublry267/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759363.md#1">陈破空：四大难题无解 恐压垮习近平自身</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759265.md#1">【翻墙必看】2020中共面临“波涛汹涌”</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760470.md#1">港人游行 警放射催泪弹并出动水炮车装甲车</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/27/n11750092.md#1">【直播中】逾103万港人元旦大游行</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759960.md#1">中共惧怕《反渗透法》 偷换焦点、渲染恐怖</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759937.md#1">最新解密档案：英方忧97年后共黑合作乱港</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759498.md#1">组图：2020港人跨年 港警发射催泪弹</a><br>
-<a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759674.md#1">1.1大游行 港人挤爆维园 警察截车搜身</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/19/12/31/n11757710.md#1">谢师恩 大陆法轮功学员祝李大师新年好</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11760052.md#1">上海老妇死于维权路 女儿为母伸冤</a><br>
 <a href="https://github.com/ublry267/djy/blob/master/gb/20/1/1/n11759917.md#1">安徽省委巡视组前副组长被判刑10年半</a><br>
